fixed home gallery z-index

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -112,7 +112,7 @@
   }
 
   .galleryContainer {
-    z-index: 10000;
+    z-index: 2;
     padding: 1rem;
   }
 }
